postgres set up + role is entity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=authorization_service
+
+spring.datasource.url=jdbc:postgresql://localhost:5430/mydatabase
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+spring.liquibase.change-log=db.changelog/db.changelog-master.yaml
