exceptions + changed structure + set up configuration + controller is ok

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.liquibase.change-log=db.changelog/db.changelog-master.yaml
+
+jwt.secret=2dfaklj728vg94b3r879gucoi28y934reasd
+jwt.expirationMs=900000
+jwt.expirationMsRefresh=2592000000
