--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -56,8 +56,8 @@ jobs:
         run: |
           scp -P ${{ secrets.PORT }} -o StrictHostKeyChecking=no *.jar ${{ secrets.USER }}@${{ secrets.HOST }}:/home/${{ secrets.USER }}/app.jar
           ssh -p ${{ secrets.PORT }} -o StrictHostKeyChecking=no ${{ secrets.USER }}@${{ secrets.HOST }} '
-            sudo systemctl stop your-app-service || true
-            sudo systemctl start your-app-service
+            sudo systemctl stop myapp.service || true
+            sudo systemctl start myapp.service
           '
 
       - name: Notify on success
