--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -54,7 +54,7 @@ jobs:
 
       - name: Deploy to server
         run: |
-          scp -P ${{ secrets.PORT }} -o StrictHostKeyChecking=no *.jar ${{ secrets.USER }}@${{ secrets.HOST }}:/home/${{ secrets.USER }}/app.jar
+          scp -P ${{ secrets.PORT }} -o StrictHostKeyChecking=no *.jar ${{ secrets.USER }}@${{ secrets.HOST }}:/opt/myapp/app.jar
           ssh -p ${{ secrets.PORT }} -o StrictHostKeyChecking=no ${{ secrets.USER }}@${{ secrets.HOST }} '
             sudo systemctl stop myapp.service || true
             sudo systemctl start myapp.service
