--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Deploy to server
         run: |
           # Загрузи docker-compose файл и jar файл
-          scp -P ${{ secrets.PORT }} -o StrictHostKeyChecking=no docker-compose.yml root@${{ secrets.HOST }}:/opt/myapp/
+          scp -P ${{ secrets.PORT }} -o StrictHostKeyChecking=no docker-compose.yaml root@${{ secrets.HOST }}:/opt/myapp/
           scp -P ${{ secrets.PORT }} -o StrictHostKeyChecking=no *.jar root@${{ secrets.HOST }}:/opt/myapp/
 
           # На сервере останови, обнови и запусти контейнеры
