--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,11 +27,13 @@ jobs:
       - name: Package application
         run: mvn package -DskipTests
 
-      - name: Upload artifact
+      - name: Upload artifact (jar + docker-compose)
         uses: actions/upload-artifact@v4
         with:
-          name: app-jar
-          path: target/*.jar
+          name: app-files
+          path: |
+            target/*.jar
+            docker-compose.yaml
 
   # === CD: Деплой на сервер (только для main ветки) ===
   deploy:
