--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
-          name: app-jar
+          name: app-files  # ✅ Исправлено: правильное имя артефакта
 
       - name: Setup SSH
         uses: webfactory/ssh-agent@v0.8.0
@@ -54,11 +54,11 @@ jobs:
 
       - name: Deploy to server
         run: |
-        
-          # Скопируй docker-compose файл отдельно из репозитория
-          scp -P ${{ secrets.PORT }} -o StrictHostKeyChecking=no docker-compose.yaml root@${{ secrets.HOST }}:/opt/myapp/
+          # Создай директорию на сервере, если её нет
+          ssh -p ${{ secrets.PORT }} -o StrictHostKeyChecking=no root@${{ secrets.HOST }} 'mkdir -p /opt/myapp'
           
-          # Скопируй jar файл из артефакта
+          # Скопируй docker-compose файл и jar файл из артефакта
+          scp -P ${{ secrets.PORT }} -o StrictHostKeyChecking=no docker-compose.yaml root@${{ secrets.HOST }}:/opt/myapp/
           scp -P ${{ secrets.PORT }} -o StrictHostKeyChecking=no *.jar root@${{ secrets.HOST }}:/opt/myapp/app.jar
           
           # На сервере запусти контейнеры
